# topos

./: .dockerignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  docker-compose.yml  package-lock.json
backend/: .dev.vars.example  .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  (+4 more)
services/ai/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  compose.local.yml  compose.yml  pyproject.toml  requirements.txt
services/ai/load-tests/k6/: generate_post.js  generate_summary.js  generate_tags.js  mixed.js  shared.js
services/ai/load-tests/proto/: ai_service.proto
services/ai/src/: main.py
services/ai/src/api/: handlers.py
services/ai/src/config/: settings.py
services/ai/src/core/: context.py
services/ai/src/core/domain/: models.py
services/ai/src/core/exceptions/: __init__.py
services/ai/src/core/interfaces/: llm_provider.py  sanitizer.py
services/ai/src/infrastructure/llm/: circuit_breaker.py  lightning_client.py  mock_provider.py
services/ai/src/infrastructure/logging/: config.py
services/ai/src/infrastructure/monitoring/: interceptors.py  metrics.py
services/ai/src/usecases/: content_logic.py  prompts.py
services/ai/src/utils/: sanitizer.py  text_cleaner.py
services/ai/tests/: conftest.py
services/ai/tests/api/: test_handlers.py
services/ai/tests/infrastructure/: test_lightning_client.py
services/ai/tests/integration/: conftest.py  test_concurrency.py  test_full_stack.py  test_grpc_channel.py  test_server_lifecycle.py
services/ai/tests/unit/: test_content_logic.py  test_sanitizer.py
(+651 files in other folders)
