[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI Intelligence Service"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "1.60.0"
grpcio-tools = "1.60.0"
httpx = "0.26.0"
python-dotenv = "1.0.1"
beautifulsoup4 = "4.12.3"
lxml = "5.1.0"
pydantic = "2.6.1"
pydantic-settings = "2.1.0"
tenacity = "8.2.3"
prometheus-client = "0.19.0"
python-json-logger = "2.0.7"
bleach = "6.1.0"
tinycss2 = "1.2.1"
setuptools = "<81"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
respx = "0.20.2"
flake8 = "*"

[tool.coverage.run]
omit = ["src/generated/*", "src/main.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
